2009-09-04  Atsushi Enomoto  <atsushi@ximian.com>

	* OperationInvokerHandler.cs, ReplyHandler.cs :
	  - Eliminate ReplyHandler use. What is does is simple reply, while
	    it brings inconsistency between sync and async models.
	    What reply handler used to do are now integrated.
	  - Support ErrorHandlers and InputSessionShutdownHandlers.
	    Actually ErrorHandlers were processed at wrong place and they
	    weren't called where they are expected.
	* InputOrReplyRequestProcessor.cs : hence eliminated ReplyHandler.
	* BaseRequestProcessor.cs : add FIXME notes on ErrorHandlers.

2009-09-04  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs : remove obsoleted method.

2009-09-02  Atsushi Enomoto  <atsushi@ximian.com>

	* BaseMessagesFormatter.cs :
	  implement XmlBodyWriter.OnCreateBufferedCopy().

2009-08-24  Atsushi Enomoto  <atsushi@ximian.com>

	* CallbackInstanceContextProvider.cs : new instance context provider
	  used by duplex client dispatcher.

2009-08-24  Atsushi Enomoto  <atsushi@ximian.com>

	* SecurityHandler.cs : skip callback duplex blocker.

2009-08-24  Atsushi Enomoto  <atsushi@ximian.com>

	* EndpointDispatcher.cs, ChannelDispatcher.cs : differentiate
	  service dispatch and callback client dispatch at initialization.

2009-08-21  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs : also made reference to host optional.

2009-08-21  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs : isolated loop manager class from parent,
	  as well as moved some code from parent.

2009-08-21  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcherCollection.cs : remove extra members.

2009-08-21  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs, EndpointDispatcher.cs :
	  moved some initialization code from ServiceHostBase, to start
	  reducing dependencies on ServiceHostBase.

2009-08-20  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs : handle unknown message in host event.
